==> JackTang543/miniBlcK2.1/sDRV/sDRV_Si24R1.c <==
#include "sDRV_Si24R1.h"

static inline void setCE(uint8_t lv){
    digitalWrite(CE_PIN,lv);
}

static void init_gpio(){
    //配置CE,下拉,高电平有效
    pinMode(CE_PIN,OUTPUT);
    digitalWrite(CE_PIN,LOW);
    //IRQ,上拉,低电平有效
    pinMode(IRQ_PIN,INPUT_PULLUP);
    
}
