==> JackTang543/wws_tran/sDRV/sDRV_Si24R1.c <==
#include "sDRV_Si24R1.h"
#include "sBSP_softSPI.h"

static inline void setCE(uint8_t lv){
    HAL_GPIO_WritePin(GPIOB,GPIO_PIN_6,lv);
}

static void init_gpio(){
    //PB0 -> CE   输出,模块控制
    //PB7 -> IRQ  
    //PA4 -> CSN  输出,片选
    //PA5 -> SCK  输出,SPI
    //PA6 -> MISO 
    //PA7 -> MOSI 
    __GPIOB_CLK_ENABLE();
    GPIO_InitTypeDef gpio_init;
    gpio_init.Mode  = GPIO_MODE_OUTPUT_PP;
    gpio_init.Pin   = GPIO_PIN_6;
    gpio_init.Pull  = GPIO_PULLDOWN;
    gpio_init.Speed = GPIO_SPEED_FREQ_HIGH;
    //配置PB0->CE,下拉,高电平有效
    HAL_GPIO_Init(GPIOB,&gpio_init);

    __GPIOB_CLK_ENABLE();
    gpio_init.Mode  = GPIO_MODE_IT_FALLING;
    gpio_init.Pin   = GPIO_PIN_0;
    gpio_init.Pull  = GPIO_PULLUP;
    //PB0<-IRQ,上拉,低电平有效
    HAL_GPIO_Init(GPIOB,&gpio_init);

    //
    HAL_NVIC_SetPriority(EXTI4_15_IRQn,0,0);
    HAL_NVIC_EnableIRQ(EXTI4_15_IRQn);
}
